--- a/develop/public/index.html
+++ b/develop/public/index.html
@@ -42,6 +42,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script>
+    //'register' indenturedServant HERE
+  </script>
   <script src="index.js"></script>
 </body>
 </html>
