--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,6 @@
       }
     })();
   </script>
-  <script src="index.js"></script>
+  <script src="dist/app.bundle.js"></script>
 </body>
 </html>
