updated title tag

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="./dist/manifest.json">
 
-  <title>Budget Tracker</title>
+  <title>iSpend.pwa</title>
 </head>
 <body>
   <div class="wrapper">
